# sockmux-glib

./: .gitignore  Makefile.am  NEWS  README  README.md  TODO  configure.ac  test-libsockmux-glib.c
src/: .gitignore  libsockmux-glib.h  libsockmux-glib.pc.in  message.h  protocol.h  receiver.c  receiver.h  sender.c  sender.h
